# robotDFM

./: .gitignore.txt  CMakeLists.txt  main.cpp  readme.md
face_recognition/: face_recognition.cpp  face_recognition.hpp
res/haarcascades/: haarcascade_fullbody.xml  haarcascade_lowerbody.xml  haarcascade_upperbody.xml
res/lbpcascades/: lbpcascade_silverware.xml
robot/: Robot.cpp  Robot.hpp
robot/head/head_moving/: driver_determination.h  img_processing.h
robot/left_arm/: left_arm_angle_determination.h
robot/serial_connector/: serial_connector.cpp  serial_connector.hpp
serial_connector/: serial_connector.cpp  serial_connector.hpp
